Sigil v0.1.8 <ADD DATE>
    - the temp directory used on Windows is now <Profile>/Sigil instead of <Profile>/My Documents/Sigil
    (issue #222)

Sigil v0.1.8 2009.13.30.
    - fix for a regression causing all imported CSS code to be merged into one line
    - fix for an issue with ignored linefeed characters (caused by same regression) (issue #217)

Sigil v0.1.7 2009.12.28.
    - minor aesthetic toolbar fixes for Mac
    - fixed an issue with "&nbsp;" in headings not being converted to a space in the TOC (issue #215)
    - minor aesthetic changes to the line number area in Code View
    - fixed an issue with "Insert Image" not working if the Book View doesn't have focus (issue #204)
    - the "Add metadata property" dialogs in the Meta Editor now remember their size, position
    and splitter bar position
    - Sigil now loads HTML metadata when importing if metadata conforms to Dublin Core;
    code contribution from Kevin Hendricks (issue #160)
    - fixed an issue with loading TXT files with unescaped character entity references (issue #202)
    - fixed an issue with headings not being centered after View switches (issue #200)
    - fixed an issue with files with uppercase extensions being loaded incorrectly
    - fixed an issue with loading TXT files with Mac-style (CR) line endings (issue #170)
    - fixed an issue with loading UTF-16 encoded files that used Windows style (CRLF) line endings
    - Sigil should now detect UTF-8 encoded HTML files even when they don't specify that they   
    are UTF-8 encoded, and HTML files that use the XML "encoding" attribute (for any encoding)
    - the Views can now be scrolled by one line up/down by pressing CTRL+Up/Down (issue #72)
    - the About dialog now links to the online version of the GPLv3
    - made viewport switching more robust; the rare crashes should now become much rarer

Sigil v0.1.6 2009.12.06.
    - added a "Report An Issue" menu entry to the Help menu; opens a web browser and goes to the